--- a/source/contacts.html
+++ b/source/contacts.html
@@ -115,7 +115,7 @@
         <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
 
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
+        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" required>
 
         <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
