--- a/source/main.html
+++ b/source/main.html
@@ -8,121 +8,122 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="main-background">
-
-  <div style="display: none;">
-    <include src="build/img/sprite.svg"></include>
-  </div>
-
-  <header class="page-header page-header--close">
-    <div class="page-header__wrapper">
-      <p class="page-header__logo">
-        <a class="page-header__logo-link"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
-      </p>
-      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <nav class="page-header__navigation">
-        <ul class="page-header__list">
-          <li class="page-header__item page-header__item--intro">
-            <a class="page-header__link page-header__link--active">Главная</a>
-          </li>
-          <li class="page-header__item">
-            <a class="page-header__link" href="product.html">О продукте</a>
-          </li>
-          <li class="page-header__item">
-            <a class="page-header__link" href="explanation.html">Как работает</a>
-          </li>
-          <li class="page-header__item">
-            <a class="page-header__link" href="technology.html">Технология</a>
-          </li>
-          <li class="page-header__item">
-            <a class="page-header__link" href="questions.html">Вопросы</a>
-          </li>
-          <li class="page-header__item">
-            <a class="page-header__link" href="contacts.html">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="page-header__order">
-        <button class="button page-header__button" type="button">Заказать</button>
-        <p class="page-header__tel page-header__tel--mobile"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
-      </div>
+  <div class="main-background__wrapper">
+    <div style="display: none;">
+      <include src="build/img/sprite.svg"></include>
     </div>
 
-    <div class="page-header__contacts page-header__contacts--close">
-      <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
-      <ul class="page-header__social">
-        <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
-        </li>
-        <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
-        </li>
-      </ul>
-    </div>
-  </header>
-
-  <main class="page-main page-main-intro">
-    <section class="intro">
-      <div class="intro__main">
-        <div class="intro__wrapper">
-          <h1 class="intro__title">Digital Planet VR</h1>
-          <p class="intro__message">Образовательный виртуальный планетарий в Новороссийске.</p>
-          <p class="intro__message">Познавательное приключение в мир звёзд и галактик.</p>
-
-          <div class="intro__button-container">
-            <button class="button intro__button intro__button-order" type="button">Заказать</button>
-            <a class="button intro__button intro__button-video" href="#">Видео</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="scroll">
-        <div class="scroll__container">
-          <ul class="scroll__social">
-            <li class="scroll__social-item">
-              <a class="scroll__social-link scroll__social-link--fb"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+    <header class="page-header page-header--close">
+      <div class="page-header__wrapper">
+        <p class="page-header__logo">
+          <a class="page-header__logo-link"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
+        </p>
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <nav class="page-header__navigation">
+          <ul class="page-header__list">
+            <li class="page-header__item page-header__item--intro">
+              <a class="page-header__link page-header__link--active">Главная</a>
             </li>
-            <li class="scroll__social-item">
-              <a class="scroll__social-link scroll__social-link--vk"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+            <li class="page-header__item">
+              <a class="page-header__link" href="product.html">О продукте</a>
+            </li>
+            <li class="page-header__item">
+              <a class="page-header__link" href="explanation.html">Как работает</a>
+            </li>
+            <li class="page-header__item">
+              <a class="page-header__link" href="technology.html">Технология</a>
+            </li>
+            <li class="page-header__item">
+              <a class="page-header__link" href="questions.html">Вопросы</a>
+            </li>
+            <li class="page-header__item">
+              <a class="page-header__link" href="contacts.html">Контакты</a>
             </li>
           </ul>
-          <p class="scroll__text">
-            <a class="scroll__link" href="explanation.html">Скролл вниз</a>
-          </p>
+        </nav>
+
+        <div class="page-header__order">
+          <button class="button page-header__button" type="button">Заказать</button>
+          <p class="page-header__tel page-header__tel--mobile"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
         </div>
       </div>
 
-    </section>
+      <div class="page-header__contacts page-header__contacts--close">
+        <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
+        <ul class="page-header__social">
+          <li class="page-header__social-item">
+            <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+          </li>
+          <li class="page-header__social-item">
+            <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+          </li>
+        </ul>
+      </div>
+    </header>
 
-    <section class="popup popup__send">
-      <div class="popup__wrapper"></div>
-      <form>
-        <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <h2 class="popup__title">Закажите VR планетарий</h2>
-        <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
-        <label for="popup-name" class="visually-hidden">Ваше имя</label>
-        <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
+    <main class="page-main page-main-intro">
+      <section class="intro">
+        <div class="intro__main">
+          <div class="intro__wrapper">
+            <h1 class="intro__title">Digital Planet VR</h1>
+            <p class="intro__message">Образовательный виртуальный планетарий в Новороссийске.</p>
+            <p class="intro__message">Познавательное приключение в мир звёзд и галактик.</p>
 
-        <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
+            <div class="intro__button-container">
+              <button class="button intro__button intro__button-order" type="button">Заказать</button>
+              <a class="button intro__button intro__button-video" href="#">Видео</a>
+            </div>
+          </div>
+        </div>
 
-        <button class="button popup__send-button" type="submit">Отправить</button>
-      </form>
-    </section>
-  </main>
+        <div class="scroll">
+          <div class="scroll__container">
+            <ul class="scroll__social">
+              <li class="scroll__social-item">
+                <a class="scroll__social-link scroll__social-link--fb"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+              </li>
+              <li class="scroll__social-item">
+                <a class="scroll__social-link scroll__social-link--vk"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+              </li>
+            </ul>
+            <p class="scroll__text">
+              <a class="scroll__link" href="product.html">Скролл вниз</a>
+            </p>
+          </div>
+        </div>
 
-  <footer class="page-footer page-footer--hidden">
-      <p class="page-footer__text">© Digital Planet, 2019</p>
-      <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
-      <ul class="page-footer__social">
-        <li class="page-footer__social-item">
-          <a class="page-footer__social-link"><span class="visually-hidden">facebook</span></a>
-        </li>
-        <li class="page-footer__social-item">
-          <a class="page-footer__social-link"><span class="visually-hidden">вконтакте</span></a>
-        </li>
-      </ul>
-  </footer>
+      </section>
+
+      <section class="popup popup__send">
+        <div class="popup__wrapper"></div>
+        <form>
+          <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
+          <h2 class="popup__title">Закажите VR планетарий</h2>
+          <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
+          <label for="popup-name" class="visually-hidden">Ваше имя</label>
+          <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
+
+          <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
+          <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" required>
+
+          <button class="button popup__send-button" type="submit">Отправить</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="page-footer page-footer--hidden">
+        <p class="page-footer__text">© Digital Planet, 2019</p>
+        <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
+        <ul class="page-footer__social">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link"><span class="visually-hidden">facebook</span></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link"><span class="visually-hidden">вконтакте</span></a>
+          </li>
+        </ul>
+    </footer>
+  </div>
 
   <script src="js/main.min.js" async></script>
 </body>
