--- a/source/product.html
+++ b/source/product.html
@@ -74,26 +74,38 @@
 
         <div class="product__slider">
           <p class="product__slider-content">Что показываем в планетарии</p>
-          <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
+          <div class="swiper-container">
             <ul class="product__slider-list swiper-wrapper">
 
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
           </ul>
 
@@ -105,7 +117,6 @@
               <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-          </div>
           </div>
 
         </div>
@@ -126,7 +137,7 @@
         <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
 
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
+        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" required>
 
         <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
