--- a/source/technology.html
+++ b/source/technology.html
@@ -13,7 +13,7 @@
     <include src="build/img/sprite.svg"></include>
   </div>
 
-   <header class="page-header page-header--close">
+    <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
         <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
@@ -68,49 +68,51 @@
 
       <p class="technology__image-container">
         <img class="technology__image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="#magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
+        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="img/sprite.svg#icon-magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
       </p>
 
-      <ul class="technology__list">
-        <li class="technology__item technology__item-1">
-          <p class="technology__item-image-container technology__item-image-container-1">
-            <img class="technology__item-image technology__item-image-1" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-          </p>
-          <h2 class="technology__item-title">Masters Glass VR-iii</h2>
-          <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
-        </li>
-        <li class="technology__item technology__item-2">
-          <p class="technology__item-image-container technology__item-image-container-2">
-            <img class="technology__item-image technology__item-image-2" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-          </p>
-          <h2 class="technology__item-title">Безопасность</h2>
-          <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
-        </li>
-        <li class="technology__item technology__item-3">
-          <p class="technology__item-image-container technology__item-image-container-3">
-            <img class="technology__item-image technology__item-image-3" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-          </p>
-          <h2 class="technology__item-title">Оборудование</h2>
-          <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
-        </li>
-        <li class="technology__item technology__item-4 technology__item--active">
-          <p class="technology__item-image-container technology__item-image-container-4">
-            <img class="technology__item-image technology__item-image-4" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-          </p>
-          <h2 class="technology__item-title">Система крепления</h2>
-          <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
-        </li>
-      </ul>
+      <div class="swiper-container js-slider-tablet">
+        <ul class="technology__list swiper-wrapper">
+          <li class="technology__item technology__item-1 swiper-slide">
+            <p class="technology__item-image-container technology__item-image-container-1">
+              <img class="technology__item-image technology__item-image-1" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+            </p>
+            <h2 class="technology__item-title">Masters Glass VR-iii</h2>
+            <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
+          </li>
+          <li class="technology__item technology__item-2 swiper-slide">
+            <p class="technology__item-image-container technology__item-image-container-2">
+              <img class="technology__item-image technology__item-image-2" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+            </p>
+            <h2 class="technology__item-title">Безопасность</h2>
+            <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
+          </li>
+          <li class="technology__item technology__item-3 swiper-slide">
+            <p class="technology__item-image-container technology__item-image-container-3">
+              <img class="technology__item-image technology__item-image-3" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+            </p>
+            <h2 class="technology__item-title">Оборудование</h2>
+            <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
+          </li>
+          <li class="technology__item technology__item-4 swiper-slide">
+            <p class="technology__item-image-container technology__item-image-container-4">
+              <img class="technology__item-image technology__item-image-4" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+            </p>
+            <h2 class="technology__item-title">Система крепления</h2>
+            <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
+          </li>
+        </ul>
 
-      <div class="technology__slider-container slider">
-          <p class="slider__number"><span class="product__slider-number--current">01 /</span> 06</p>
+        <div class="technology__slider-container slider">
+          <p class="slider__pagination swiper-pagination"></p>
 
           <div class="slider__buttons">
-            <button class="slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
-            <button class="slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+            <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
+            <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
           </div>
         </div>
-
+      </div>
     </section>
 
     <div class="scroll">
@@ -127,7 +129,7 @@
         <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
 
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
+        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" required>
 
         <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
