--- a/source/contacts.html
+++ b/source/contacts.html
@@ -15,7 +15,7 @@
   <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
-        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
+        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#Logo-Digital-Planet"></use></svg></a>
       </p>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="page-header__navigation">
