--- a/source/main.html
+++ b/source/main.html
@@ -14,9 +14,9 @@
     </div>
 
     <header class="page-header page-header--close">
-      <div class="page-header__wrapper">
+      <div class="page-header__wrapper page-header__wrapper--main">
         <p class="page-header__logo">
-          <a class="page-header__logo-link"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
+          <a class="page-header__logo-link"><svg class="page-header__logo-image page-header__logo-image--main" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#Logo-Digital-Planet"></use></svg></a>
         </p>
         <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <nav class="page-header__navigation">
@@ -52,10 +52,10 @@
         <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
         <ul class="page-header__social">
           <li class="page-header__social-item">
-            <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+            <a class="page-header__social-link page-header__social-link--fb" href="#"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
           </li>
           <li class="page-header__social-item">
-            <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+            <a class="page-header__social-link page-header__social-link--vk" href="#"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
           </li>
         </ul>
       </div>
@@ -76,14 +76,14 @@
           </div>
         </div>
 
-        <div class="scroll">
+        <div class="scroll scroll--intro">
           <div class="scroll__container">
             <ul class="scroll__social">
               <li class="scroll__social-item">
-                <a class="scroll__social-link scroll__social-link--fb"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+                <a class="scroll__social-link scroll__social-link--fb" href="#"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
               </li>
               <li class="scroll__social-item">
-                <a class="scroll__social-link scroll__social-link--vk"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+                <a class="scroll__social-link scroll__social-link--vk" href="#"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
               </li>
             </ul>
             <p class="scroll__text">
@@ -116,10 +116,10 @@
         <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
         <ul class="page-footer__social">
           <li class="page-footer__social-item">
-            <a class="page-footer__social-link"><span class="visually-hidden">facebook</span></a>
+            <a class="page-footer__social-link" href="#"><span class="visually-hidden">facebook</span></a>
           </li>
           <li class="page-footer__social-item">
-            <a class="page-footer__social-link"><span class="visually-hidden">вконтакте</span></a>
+            <a class="page-footer__social-link" href="#"><span class="visually-hidden">вконтакте</span></a>
           </li>
         </ul>
     </footer>
