--- a/source/questions.html
+++ b/source/questions.html
@@ -16,7 +16,7 @@
   <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
-        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
+        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#Logo-Digital-Planet"></use></svg></a>
       </p>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="page-header__navigation">
@@ -71,7 +71,7 @@
             <p class="questions__question">Сколько длится сеанс? Дети не устают во время просмотра?
               <button class="button questions__button" type="button"><span class="visually-hidden">Показать ответ</span></button>
             </p>
-            <p class="questions__answer"></p>
+            <p class="questions__answer">VR-очки были разработаны специально для того, чтобы каждый человек, независимо от возраста, качества зрения и опыта использования аналогичных продуктов мог безопасно и легко пользоваться этой технологией. У нас есть сертификат качества продукции и лицензия для её использования на территории РФ. Для людей с зрением, отличным от идеального, на VR-очках предусмотрена регулировка диоптрий.</p>
           </li>
           <li class="questions__item questions__item--open">
             <p class="questions__question">Безопасны ли VR-очки для зрения ребёнка? Какие есть ограничения?
@@ -83,13 +83,13 @@
             <p class="questions__question">Дейсвтительно ли это образовательный метод, или это лишь игрушка?
               <button class="button questions__button" type="button"><span class="visually-hidden">Показать ответ</span></button>
             </p>
-            <p class="questions__answer"></p>
+            <p class="questions__answer">VR-очки были разработаны специально для того, чтобы каждый человек, независимо от возраста, качества зрения и опыта использования аналогичных продуктов мог безопасно и легко пользоваться этой технологией. У нас есть сертификат качества продукции и лицензия для её использования на территории РФ. Для людей с зрением, отличным от идеального, на VR-очках предусмотрена регулировка диоптрий.</p>
           </li>
           <li class="questions__item">
             <p class="questions__question">Всё понятно! Хочу заказать выезд VR планетария, что нужно сделать?
               <button class="button questions__button" type="button"><span class="visually-hidden">Показать ответ</span></button>
             </p>
-            <p class="questions__answer"></p>
+            <p class="questions__answer">VR-очки были разработаны специально для того, чтобы каждый человек, независимо от возраста, качества зрения и опыта использования аналогичных продуктов мог безопасно и легко пользоваться этой технологией. У нас есть сертификат качества продукции и лицензия для её использования на территории РФ. Для людей с зрением, отличным от идеального, на VR-очках предусмотрена регулировка диоптрий.</p>
           </li>
         </ul>
       </div>
