--- a/source/technology.html
+++ b/source/technology.html
@@ -16,7 +16,7 @@
     <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
-        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#icon-Logo-Digital-Planet"></use></svg></a>
+        <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#Logo-Digital-Planet"></use></svg></a>
       </p>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <nav class="page-header__navigation">
@@ -68,8 +68,8 @@
 
       <p class="technology__image-container">
         <img class="technology__image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="img/sprite.svg#icon-magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
       </p>
+      <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="img/sprite.svg#icon-magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
 
       <div class="swiper-container js-slider-tablet">
         <ul class="technology__list swiper-wrapper">
