--- a/source/technology.html
+++ b/source/technology.html
@@ -52,10 +52,10 @@
       <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
       <ul class="page-header__social">
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+          <a class="page-header__social-link page-header__social-link--fb" href="#"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
         </li>
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+          <a class="page-header__social-link page-header__social-link--vk" href="#"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
         </li>
       </ul>
     </div>
@@ -116,7 +116,7 @@
     </section>
 
     <div class="scroll">
-      <a class="scroll__link" href="questions.html"><span class="visually-hidden">Скролл вниз</span></a>
+      <a class="scroll__link scroll__link-arrow" href="questions.html"><span class="visually-hidden">Скролл вниз</span></a>
     </div>
 
     <section class="popup popup__send">
@@ -141,10 +141,10 @@
     <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
     <ul class="page-footer__social">
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--fb"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+        <a class="page-footer__social-link page-footer__social-link--fb" href="#"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
       </li>
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--vk"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+        <a class="page-footer__social-link page-footer__social-link--vk" href="#"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
       </li>
     </ul>
   </footer>
