--- a/source/contacts.html
+++ b/source/contacts.html
@@ -51,16 +51,16 @@
       <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
       <ul class="page-header__social">
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+          <a class="page-header__social-link page-header__social-link--fb" href="#"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
         </li>
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+          <a class="page-header__social-link page-header__social-link--vk" href="#"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
         </li>
       </ul>
     </div>
   </header>
 
-  <main class="page-main">
+  <main class="page-main page-main--contacts">
     <section class="contacts">
       <h1 class="contacts__title">Контакты</h1>
 
@@ -137,10 +137,10 @@
     <p class="page-footer__text page-footer__text--center">Детский VR планетарий. Все права защищены.</p>
     <ul class="page-footer__social">
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--fb"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+        <a class="page-footer__social-link page-footer__social-link--fb" href="#"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
       </li>
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--vk"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+        <a class="page-footer__social-link page-footer__social-link--vk" href="#"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
       </li>
     </ul>
   </footer>
