--- a/source/product.html
+++ b/source/product.html
@@ -52,10 +52,10 @@
       <p class="page-header__tel"><a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a></p>
       <ul class="page-header__social">
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--fb"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+          <a class="page-header__social-link page-header__social-link--fb" href="#"><svg class="page-header__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
         </li>
         <li class="page-header__social-item">
-          <a class="page-header__social-link page-header__social-link--vk"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+          <a class="page-header__social-link page-header__social-link--vk" href="#"><svg class="page-header__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
         </li>
       </ul>
     </div>
@@ -64,68 +64,72 @@
   <main class="page-main">
     <section class="product">
       <h1 class="visually-hidden">Информация о продукте</h1>
-      <p class="product__title">Что такое VR-планетарий?</p>
-      <div class="product__wrapper">
-        <div class="product__text-container">
-          <p class="product__text">Это образовательная программа, использующая технологию виртуальной реальности.</p>
-          <p class="product__text">Зрителям выдаются очки виртуальной реальности, оператор запускает сеанс планетария на всех очках одновременно. В коллекции фильмов идут обучающие картины о космосе, астрономии  и обществознании.</p>
-          <p class="product__text">За счёт реалестичности  и имитации игры такое обучение повышает мотивацию и стимулирует активную мозговую деятельность ребёнка.</p>
-        </div>
+      <div class="product__container">
+        <p class="product__title">Что такое VR-планетарий?</p>
+          <div class="product__wrapper">
+            <div class="product__text-container">
+              <p class="product__text">Это образовательная программа, использующая технологию виртуальной реальности.</p>
+              <p class="product__text">Зрителям выдаются очки виртуальной реальности, оператор запускает сеанс планетария на всех очках одновременно. В коллекции фильмов идут обучающие картины о космосе, астрономии  и обществознании.</p>
+              <p class="product__text">За счёт реалестичности  и имитации игры такое обучение повышает мотивацию и стимулирует активную мозговую деятельность ребёнка.</p>
+            </div>
 
-        <div class="product__slider">
-          <p class="product__slider-content">Что показываем в планетарии</p>
-          <div class="swiper-container">
-            <ul class="product__slider-list swiper-wrapper">
+            <div class="product__slider">
+              <p class="product__slider-content">Что показываем в планетарии</p>
+              <div class="swiper-container">
+                <ul class="product__slider-list swiper-wrapper">
 
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-            <li class="product__slide swiper-slide">
-              <div class="product__slide-wrapper">
-                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-              </div>
-            </li>
-          </ul>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+                <li class="product__slide swiper-slide">
+                  <div class="product__slide-wrapper">
+                    <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+                  </div>
+                </li>
+              </ul>
 
-          <div class="product__slider-container slider">
-            <p class="slider__pagination swiper-pagination"></p>
+              <div class="product__slider-container slider">
+                <p class="slider__pagination swiper-pagination"></p>
 
-            <div class="slider__buttons">
-              <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
-              <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
-              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                <div class="slider__buttons">
+                  <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
+                  <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
+                  <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                </div>
+              </div>
+
             </div>
           </div>
-
         </div>
+      </div>
+
+      <div class="scroll">
+        <a class="scroll__link scroll__link-arrow" href="explanation.html"><span class="visually-hidden">Скролл вниз</span></a>
       </div>
     </section>
 
-    <div class="scroll">
-      <a class="scroll__link" href="explanation.html"><span class="visually-hidden">Скролл вниз</span></a>
-    </div>
 
     <section class="popup popup__send">
       <div class="popup__wrapper"></div>
@@ -149,10 +153,10 @@
     <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
     <ul class="page-footer__social">
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--fb"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+        <a class="page-footer__social-link page-footer__social-link--fb" href="#"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
       </li>
       <li class="page-footer__social-item">
-        <a class="page-footer__social-link page-footer__social-link--vk"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+        <a class="page-footer__social-link page-footer__social-link--vk" href="#"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
       </li>
     </ul>
   </footer>
