--- a/source/product.html
+++ b/source/product.html
@@ -64,7 +64,6 @@
   <main class="page-main">
     <section class="product">
       <h1 class="visually-hidden">Информация о продукте</h1>
-      <div class="product__container">
         <p class="product__title">Что такое VR-планетарий?</p>
           <div class="product__wrapper">
             <div class="product__text-container">
@@ -114,7 +113,7 @@
                 <p class="slider__pagination swiper-pagination"></p>
 
                 <div class="slider__buttons">
-                  <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
+                  <button class="slider__button slider__button--prev swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
                   <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
                   <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
                 </div>
@@ -123,13 +122,11 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="scroll">
-        <a class="scroll__link scroll__link-arrow" href="explanation.html"><span class="visually-hidden">Скролл вниз</span></a>
-      </div>
     </section>
 
+    <div class="scroll">
+      <a class="scroll__link scroll__link-arrow" href="explanation.html"><span class="visually-hidden">Скролл вниз</span></a>
+    </div>
 
     <section class="popup popup__send">
       <div class="popup__wrapper"></div>
