--- a/source/main.html
+++ b/source/main.html
@@ -8,10 +8,9 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="main-background">
-  <div class="main-background__wrapper">
-    <div style="display: none;">
-      <include src="build/img/sprite.svg"></include>
-    </div>
+  <div style="display: none;">
+    <include src="build/img/sprite.svg"></include>
+  </div>
 
     <header class="page-header page-header--close">
       <div class="page-header__wrapper page-header__wrapper--main">
@@ -61,7 +60,7 @@
       </div>
     </header>
 
-    <main class="page-main">
+    <main class="page-main page-main--intro">
       <section class="intro">
         <div class="intro__main">
           <div class="intro__wrapper">
@@ -123,7 +122,6 @@
           </li>
         </ul>
     </footer>
-  </div>
 
   <script src="js/main.min.js" async></script>
 </body>
