--- a/source/explanation.html
+++ b/source/explanation.html
@@ -124,7 +124,7 @@
         <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
 
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" required>
+        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" min="11" required>
 
         <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
