--- a/source/explanation.html
+++ b/source/explanation.html
@@ -2,16 +2,17 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <title>VR планетарий</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>VR планетарий</title>
+  <link rel="preload" href="fonts/ubuntu-300.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-500.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-700.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-regular.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <div style="display: none;">
-    <include src="build/img/sprite.svg"></include>
-  </div>
-  <header class="page-header page-header--close">
+    <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
         <a class="page-header__logo-link" href="main.html"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="img/sprite.svg#Logo-Digital-Planet"></use></svg></a>
