--- a/source/main.html
+++ b/source/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>VR планетарий</title>
   <meta charset="UTF-8">
+  <title>VR планетарий</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preload" href="fonts/ubuntu-300.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-500.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-700.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-regular.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <div style="display: none;">
-    <include src="build/img/sprite.svg"></include>
-  </div>
+
   <div class="main-background">
     <header class="page-header page-header--close">
       <div class="page-header__wrapper page-header__wrapper--main">
