--- a/source/product.html
+++ b/source/product.html
@@ -2,16 +2,16 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <title>VR планетарий</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>VR планетарий</title>
+  <link rel="preload" href="fonts/ubuntu-300.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-500.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-700.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ubuntu-regular.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
-  <div style="display: none;">
-    <include src="build/img/sprite.svg"></include>
-  </div>
 
   <header class="page-header page-header--close">
     <div class="page-header__wrapper">
